--- a/pages/index.html
+++ b/pages/index.html
@@ -32,6 +32,11 @@
         <div>Навык 2</div>
         <div>Навык 3</div>
         <div>Навык 4</div>
+        <div> Мой опыт работы:
+            <div>
+                Опыт 1<br>
+                Работал фантазёром. Сочинял и праздновал.
+            </div>
     </main>
  </body>
 </html>
