--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
-<html lamg = "ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Семестровая работа</title>
- </head>
- <body>
+<html lamg="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Семестровая работа</title>
+</head>
+
+<body>
     <header>Ходер</header>
     <nav>
         <ui>
             <li>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="pages/news.html">Новости</a></li>
-                <li><a href="pages/practices.html">Практики</a></li>
-                <li><a href="pages/goods.html">Товары</a></li>
-                <li><a href="pages/contacts.html">К
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="pages/news.html">Новости</a></li>
+            <li><a href="pages/practices.html">Практики</a></li>
+            <li><a href="pages/goods.html">Товары</a></li>
+            <li><a href="pages/contacts.html">К
             </li>
         </ui>
     </nav>
     <main>
         <p>Информация об авторе</p>
-        <img src="images/photo.jpg" alt="Фото автора" width="200"
-        height="250">
-        <p>Иванов Иван Иванович</p>
-        <p>ЭФБО-00-00</p>
-        <p>Обо мне: Я родился в Москве в 70-м на краю города. Глупость рано
-        ударила в голову. В четыре активно ругался.
-        Потом школа, форма, драки, клей. Так я становился сильней. Воровал деньги в
-        раздевалке.</p>
+        <img src="images/photo.jpg" alt="Фото автора" width="200" height="250">
+        <p>Лэ Дык Тхань Дат</p>
+        <p>ЭФБО-12-24</p>
+        <p>Обо мне: Я родился в Краснодаре в 70-м на краю города. Друг на площадке ударил в голову и после этого я
+            поменялся . В четыре активно ругался.
+            Потом школа, форма, драки, клей. Так я становился сильней. Воровал деньги в
+            раздевалке.
+        </p>
+        <div class="bio">
+            <h3>Сергей "Клей" Крутов</h3>
+            <p>Род. 1970, Краснодар, окраина</p>
+            <ul>
+                <li>Дворовый теннис: после удара мячом по голове стал другим</li>
+                <li>С детства жесткий: в 4 года уже уверенно ругался</li>
+                <li>Школа: драки, форма всегда в крови и пыли</li>
+                <li>Клей - не клеймо, а прозвище за силу</li>
+                <li>Воровал в раздевалках - так доказывал свое право</li>
+                <li>Вся злость с улиц стала оружием на корте</li>
+            </ul>
+            <p>Чемпионство не по учебникам, а по праву сильного</p>
+        </div>
         <div>Навык 1</div>
         <div>Навык 2</div>
         <div>Навык 3</div>
@@ -38,5 +53,6 @@
                 Работал фантазёром. Сочинял и праздновал.
             </div>
     </main>
- </body>
+</body>
+
 </html>
