--- a/index.html
+++ b/index.html
@@ -23,16 +23,13 @@
     <main>
         <p>Информация об авторе</p>
         <img src="images/photo.jpg" alt="Фото автора" width="200" height="250">
-        <p>Лэ Дык Тхань Дат</p>
-        <p>ЭФБО-12-24</p>
-        <p>Обо мне: Я родился в Краснодаре в 70-м на краю города. Друг на площадке ударил в голову и после этого я
-            поменялся . В четыре активно ругался.
-            Потом школа, форма, драки, клей. Так я становился сильней. Воровал деньги в
-            раздевалке.
-        </p>
         <div class="bio">
-            <h3>Сергей "Клей" Крутов</h3>
-            <p>Род. 1970, Краснодар, окраина</p>
+            <h3>Лэ Дык Тхань Дат</h3>
+            <p>ЭФБО-12-24</p>
+            <p>Род. 1970, Чебоксары</p>
+            <p>
+
+            </p>
             <ul>
                 <li>Дворовый теннис: после удара мячом по голове стал другим</li>
                 <li>С детства жесткий: в 4 года уже уверенно ругался</li>
