--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
     </nav>
     <main>
         <p>Информация об авторе</p>
-        <img src="images/photo.jpg" alt="Фото автора" width="200" height="250">
+        <img src="images/photo.jpg" alt="Фото автора" width="640" height="480">
         <div class="bio">
             <h3>Лэ Дык Тхань Дат</h3>
             <p>ЭФБО-12-24</p>
             <p>Род. 1970, Чебоксары</p>
-            <p>
-
-            </p>
+            <p>Обо мне:</p>
             <ul>
                 <li>Дворовый теннис: после удара мячом по голове стал другим</li>
                 <li>С детства жесткий: в 4 года уже уверенно ругался</li>
