--- a/pages/goods.html
+++ b/pages/goods.html
@@ -4,54 +4,55 @@
   <meta charset="utf-8">
   <title>Каталог товаров</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../styles/main.css">
   <meta name="description" content="Каталог: карточки товаров с изображением, названием и ценой.">
-  <style>
-    :root { --max: 1100px; --gap: 16px; --muted: #6b7280; --border: #e5e7eb; }
-    * { box-sizing: border-box; }
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.6; color: #111827; background: #fff; }
-    header.site-header, footer.site-footer { background: #111827; color: #fff; }
-    .wrap { max-width: var(--max); margin: 0 auto; padding: 16px; }
-    nav.primary { background: #1f2937; color: #fff; }
-    nav.primary a { color: #fff; text-decoration: none; }
-    nav.primary ul { list-style: none; display: flex; gap: 16px; margin: 0; padding: 0; overflow-x: auto; }
-    main { padding-block: 24px; }
-    .catalog { margin: 0; padding: 0; list-style: none; display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: var(--gap); }
-    .card { border: 1px solid var(--border); border-radius: 12px; overflow: hidden; background: #fff; display: flex; flex-direction: column; height: 100%; }
-    .card picture, .card img { display: block; width: 100%; height: auto; }
-    .card .body { padding: 12px; display: flex; flex-direction: column; gap: 8px; flex: 1; }
-    .card h3 { margin: 0; font-size: 1rem; line-height: 1.4; }
-    .price { margin-top: auto; font-weight: 600; }
-    .muted { color: var(--muted); font-size: 0.9rem; }
-    footer.site-footer { margin-top: 24px; }
-  </style>
 </head>
 <body>
-
-  <!-- Хедер из основной страницы -->
   <header class="site-header" role="banner">
     <div class="wrap">
-      <a href="index.html" style="color:#fff; text-decoration:none;"><h1 style="margin:0;">Название магазина</h1></a>
-      <p class="muted" style="color:#d1d5db;">Каталог товаров и лучшие предложения</p>
+      <a href="../index.html" style="color:#fff;"><h1 style="margin:0;">Каталог</h1></a>
+      <p class="muted" style="color:#d1d5db;">Товары и предложения</p>
     </div>
   </header>
 
-  <!-- Меню навигации из основной страницы -->
   <nav class="primary" aria-label="Основная навигация">
     <div class="wrap">
       <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="goods.html" aria-current="page">Каталог</a></li>
-        <li><a href="sales.html">Акции</a></li>
-        <li><a href="about.html">О нас</a></li>
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="news.html">Новости</a></li>
+        <li><a href="practices.html">Практики</a></li>
+        <li><a href="goods.html" aria-current="page">Товары</a></li>
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
     </div>
   </nav>
 
-  <!-- Основной контент: карточки товаров -->
   <main id="content" class="wrap">
     <h2 style="margin: 0 0 12px 0;">Каталог</h2>
-    <p class="muted" style="margin: 0 0 16px 0;">Выберите товар из списка ниже</p>
+    <p class="muted" style="margin: 0 0 16px 0;">Выберите товар</p>
 
-    <!-- Список карточек (доступность: озвучивание количества) -->
-    <ul class="catalog" role
+    <ul class="catalog" role="list" aria-label="Список товаров">
+      <li class="card" aria-label="Наушники Sonic Pro, цена 4 990 ₽">
+        <picture><img src="../images/headphones.jpg" alt="Беспроводные наушники Sonic Pro, черный" width="600" height="400" loading="lazy"></picture>
+        <div class="body"><h3>Наушники Sonic Pro</h3><div class="price">4 990 ₽</div></div>
+      </li>
+      <li class="card" aria-label="Умные часы FitTime S, цена 7 490 ₽">
+        <picture><img src="../images/watch.jpg" alt="Умные часы FitTime S с металлическим ремешком" width="600" height="400" loading="lazy"></picture>
+        <div class="body"><h3>Умные часы FitTime S</h3><div class="price">7 490 ₽</div></div>
+      </li>
+      <li class="card" aria-label="Колонка Wave Mini, цена 2 990 ₽">
+        <picture><img src="../images/speaker.jpg" alt="Портативная колонка Wave Mini, синий" width="600" height="400" loading="lazy"></picture>
+        <div class="body"><h3>Колонка Wave Mini</h3><div class="price">2 990 ₽</div></div>
+      </li>
+      <li class="card" aria-label="Пауэрбанк PowerGo 20 000, цена 3 490 ₽">
+        <picture><img src="../images/powerbank.jpg" alt="Пауэрбанк PowerGo 20000 мА·ч, графитовый" width="600" height="400" loading="lazy"></picture>
+        <div class="body"><h3>Пауэрбанк PowerGo 20 000</h3><div class="price">3 490 ₽</div></div>
+      </li>
+    </ul>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="wrap"><p style="margin:0;">© 2025 Семестровая работа</p></div>
+  </footer>
+</body>
+</html>
