--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <main class="wrap">
     <h2>Информация об авторе</h2>
-    <img src="images/photo.jpg" alt="Фото автора" width="640" height="480">
+    <img src="images/photo.png" alt="Фото автора" width="640" height="480">
     <div class="bio">
       <h3>Лэ Дык Тхань Дат</h3>
       <p>ЭФБО-12-24</p>
