--- a/pages/goods.html
+++ b/pages/goods.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Каталог товаров</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <meta name="description" content="Каталог: карточки товаров с изображением, названием и ценой.">
 </head>
 <body>
@@ -32,21 +32,17 @@
     <p class="muted" style="margin: 0 0 16px 0;">Выберите товар</p>
 
     <ul class="catalog" role="list" aria-label="Список товаров">
-      <li class="card" aria-label="Наушники Sonic Pro, цена 4 990 ₽">
-        <picture><img src="../images/headphones.jpg" alt="Беспроводные наушники Sonic Pro, черный" width="600" height="400" loading="lazy"></picture>
-        <div class="body"><h3>Наушники Sonic Pro</h3><div class="price">4 990 ₽</div></div>
+      <li class="card" aria-label="Илья Муромец">
+        <picture><img src="../images/images.jpg" alt="Илья Муромец с Юлий" width="600" height="400" loading="lazy"></picture>
+        <div class="body"><h3>Илья Муромец с Юлий</h3><div class="price">119 000 ₽</div></div>
       </li>
-      <li class="card" aria-label="Умные часы FitTime S, цена 7 490 ₽">
-        <picture><img src="../images/watch.jpg" alt="Умные часы FitTime S с металлическим ремешком" width="600" height="400" loading="lazy"></picture>
-        <div class="body"><h3>Умные часы FitTime S</h3><div class="price">7 490 ₽</div></div>
+      <li class="card" aria-label="Добрыни Никитича">
+        <picture><img src="../images/images(1).jpg" alt="Добрыни Никитича" width="600" height="400" loading="lazy"></picture>
+        <div class="body"><h3>Добрыни Никитича</h3><div class="price">12 999 ₽</div></div>
       </li>
-      <li class="card" aria-label="Колонка Wave Mini, цена 2 990 ₽">
-        <picture><img src="../images/speaker.jpg" alt="Портативная колонка Wave Mini, синий" width="600" height="400" loading="lazy"></picture>
-        <div class="body"><h3>Колонка Wave Mini</h3><div class="price">2 990 ₽</div></div>
-      </li>
-      <li class="card" aria-label="Пауэрбанк PowerGo 20 000, цена 3 490 ₽">
-        <picture><img src="../images/powerbank.jpg" alt="Пауэрбанк PowerGo 20000 мА·ч, графитовый" width="600" height="400" loading="lazy"></picture>
-        <div class="body"><h3>Пауэрбанк PowerGo 20 000</h3><div class="price">3 490 ₽</div></div>
+      <li class="card" aria-label="Алёша Попович">
+        <picture><img src="../images/images(2).jpg" alt="Алёши Попович" width="600" height="400" loading="lazy"></picture>
+        <div class="body"><h3>Алёша Попович</h3><div class="price">7 999 ₽</div></div>
       </li>
     </ul>
   </main>
