--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Семестровая работа — Главная</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/style.css">
   <meta name="description" content="Главная страница семестровой работы: автор, новости, практики, каталог и контакты.">
 </head>
 <body>
