--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Контакты</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <meta name="description" content="Контакты: e‑mail, адрес и кнопка для обратного звонка.">
 </head>
 <body>
