--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
   <meta charset="utf-8">
   <title>Семестровая работа — Главная</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- общий файл стилей -->
   <link rel="stylesheet" href="styles/style.css">
   <meta name="description" content="Главная страница семестровой работы: автор, новости, практики, каталог и контакты.">
 </head>
 <body>
+  <!-- Шапка сайта -->
   <header class="site-header" role="banner">
     <div class="wrap">
-      <h1 style="margin:0; color:#fff;">Хедер</h1>
-      <p class="muted" style="color:#d1d5db;">Семестровая работа</p>
+      <h1>Хедер</h1>
+      <p class="muted">Семестровая работа</p>
     </div>
   </header>
 
+  <!-- Основная навигация -->
   <nav class="primary" aria-label="Основная навигация">
     <div class="wrap">
       <ul>
@@ -27,13 +30,17 @@
     </div>
   </nav>
 
-  <main class="wrap">
+  <!-- Контент -->
+  <main class="wrap" id="content">
     <h2>Информация об авторе</h2>
-    <img src="images/photo.png" alt="Фото автора" width="640" height="480">
-    <div class="bio">
-      <h3>Лэ Дык Тхань Дат</h3>
-      <p>ЭФБО-12-24</p>
+
+    <img src="images/photo.png" alt="Фото автора" class="profile-photo" width="640" height="480">
+
+    <div class="bio about-me">
+      <h3 class="profile-name">Лэ Дык Тхань Дат</h3>
+      <p class="profile-group">ЭФБО-12-24</p>
       <p>Род. 1970, Чебоксары</p>
+
       <h4>Обо мне</h4>
       <ul>
         <li>Дворовый теннис: после удара мячом по голове стал другим</li>
@@ -47,18 +54,31 @@
     </div>
 
     <h4>Навыки</h4>
-    <div>Навык 1</div>
-    <div>Навык 2</div>
-    <div>Навык 3</div>
-    <div>Навык 4</div>
-
-    <h4>Мой опыт работы</h4>
-    <div>
-      Опыт 1<br>
-      Работал фантазёром. Сочинял и праздновал.
+    <div class="skills-container">
+      <span class="skill-tag">Навык 1
+        умею готовить
+      </span>
+      <span class="skill-tag">Навык 2
+        10 000 кубков в Clash Royale
+      </span>
+      <span class="skill-tag">Навык 3
+        Умею свистеть
+      </span>
+      <span class="skill-tag">Навык 4
+        Плавать умею
+      </span>
     </div>
+
+    <section class="experience-section">
+      <h4 class="section-title">Мой опыт работы</h4>
+      <article class="experience-card">
+        <h5 class="experience-title">Опыт 1</h5>
+        <p class="experience-desc">Работал фантазёром. Сочинял и праздновал.</p>
+      </article>
+    </section>
   </main>
 
+  <!-- Футер -->
   <footer class="site-footer" role="contentinfo">
     <div class="wrap">
       <p style="margin:0;">© 2025 Семестровая работа</p>
