--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="bio about-me">
       <h3 class="profile-name">Лэ Дык Тхань Дат</h3>
       <p class="profile-group">ЭФБО-12-24</p>
-      <p>Род. 1970, Чебоксары</p>
+      <p>Род. 1997, Чебоксары</p>
 
       <h4>Обо мне</h4>
       <ul>
@@ -72,8 +72,14 @@
     <section class="experience-section">
       <h4 class="section-title">Мой опыт работы</h4>
       <article class="experience-card">
+        //
         <h5 class="experience-title">Опыт 1</h5>
-        <p class="experience-desc">Работал фантазёром. Сочинял и праздновал.</p>
+        <p class="experience-desc">Работал в парке.
+        <h5 class="experience-title">Опыт 2</h5>
+        <p class="experience-desc">Был в лесу.
+        <h5 class="experience-title">Опыт 2</h5>
+        <p class="experience-desc">Летал в Перу.
+        </p>
       </article>
     </section>
   </main>
