--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Шапка -->
     <header class="header" role="banner">
       <div class="wrap">
-        <h1 class="profile-title">Семестровая работа</h1>
+        <h1 class="profile-title">Хедер</h1>
         <p class="profile-group">Главная страница</p>
       </div>
     </header>
@@ -71,17 +71,17 @@
 
         <div class="experience-grid">
           <article class="experience-card">
-            <h4 class="experience-title">Опыт 1</h4>
+            <h4 class="experience-title">Опыт до 10 лет</h4>
             <p class="experience-desc">Работал в парке. Работал фантазёром: сочинял и праздновал.</p>
           </article>
 
           <article class="experience-card">
-            <h4 class="experience-title">Опыт 2</h4>
+            <h4 class="experience-title">Опыт до 15 лет </h4>
             <p class="experience-desc">Был в лесу. Работал воровством: воровал и продавал.</p>
           </article>
 
           <article class="experience-card">
-            <h4 class="experience-title">Опыт 3</h4>
+            <h4 class="experience-title">Опыт до 25</h4>
             <p class="experience-desc">Летал в Перу. Работал рэпером: читал и пел.</p>
           </article>
         </div>
