--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -2,67 +2,74 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Контакты</title>
+  <title>Семестровая работа — Контакты</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Контактная информация, форма обратной связи и время работы.">
   <link rel="stylesheet" href="../styles/style.css">
-  <meta name="description" content="Контакты: e‑mail, адрес и кнопка для обратного звонка.">
 </head>
 <body>
-  <header class="site-header" role="banner">
-    <div class="wrap">
-      <a href="../index.html" style="color:#fff;"><h1 style="margin:0;">Контакты</h1></a>
-      <p class="muted" style="color:#d1d5db;">Связаться с командой</p>
-    </div>
-  </header>
-
-  <nav class="primary" aria-label="Основная навигация">
-    <div class="wrap">
-      <ul>
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="news.html">Новости</a></li>
-        <li><a href="practices.html">Практики</a></li>
-        <li><a href="goods.html">Товары</a></li>
-        <li><a href="contacts.html" aria-current="page">Контакты</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <main id="content" class="wrap">
-    <h2 style="margin: 0 0 12px 0;">Контакты</h2>
-    <p class="muted" style="margin: 0 0 16px 0;">Всегда на связи в рабочие часы</p>
-
-    <section class="grid" aria-label="Контактная информация">
-      <div class="card" role="group" aria-labelledby="email-title">
-        <h3 id="email-title" style="margin-top:0;">Электронная почта</h3>
-        <p>Пишите на общий адрес редакции.</p>
-        <p><a href="mailto:editor@example.com" class="btn" aria-label="Написать на электронную почту">Написать</a></p>
+  <div class="page-container">
+    <header class="header" role="banner">
+      <div class="wrap">
+        <h1 class="profile-title">Контакты</h1>
+        <p class="profile-group">Всегда на связи в рабочие часы</p>
       </div>
+    </header>
 
-      <div class="card" role="group" aria-labelledby="address-title">
-        <h3 id="address-title" style="margin-top:0;">Адрес</h3>
-        <address>
-          123100, г. Москва, Пресненская наб., д. 10, офис 15<br>
-          Пн–Пт: 10:00–19:00
-        </address>
+    <nav class="nav" aria-label="Основная навигация">
+      <div class="wrap">
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+          <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+          <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+          <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacts.html" aria-current="page">Контакты</a></li>
+        </ul>
       </div>
-    </section>
+    </nav>
 
-    <section class="card" style="margin-top:16px;" aria-label="Обратный звонок">
-      <h3 style="margin-top:0;">Позвоните мне</h3>
-      <p class="muted">Оставьте запрос — специалист свяжется по указанному номеру.</p>
-      <form action="#" method="post" aria-label="Форма обратного звонка">
-        <label for="phone">Номер телефона</label>
-        <div style="display:flex; gap:8px; margin-top:6px;">
-          <input id="phone" name="phone" type="tel" inputmode="tel" required placeholder="+7 900 000‑00‑00" style="flex:1; padding:10px; border:1px solid var(--border); border-radius:8px;">
-          <button type="submit" class="btn">Позвоните мне</button>
+    <main class="content" role="main">
+      <section class="contacts-container" aria-labelledby="contacts-title">
+        <h2 id="contacts-title" class="section-title">Как связаться</h2>
+
+        <div class="contact-info">
+          <p><strong>E‑mail:</strong> hello@example.ru</p>
+          <p><strong>Адрес:</strong> 123100, г. Москва, Пресненская наб., д. 10, офис 15</p>
+          <p><strong>Часы работы:</strong> Пн–Пт: 10:00–19:00</p>
+          <p><strong>Телефон:</strong> +7 (999) 123‑45‑67</p>
         </div>
-      </form>
-      <p style="margin-top:8px;"><a href="tel:+79000000000" aria-label="Позвонить по номеру +7 900 000 00 00">Или позвонить сейчас</a></p>
-    </section>
-  </main>
 
-  <footer class="site-footer" role="contentinfo">
-    <div class="wrap"><p style="margin:0;">© 2025 Семестровая работа</p></div>
-  </footer>
+        <form class="contact-form" aria-labelledby="form-title">
+          <h3 id="form-title" class="section-title">Оставьте запрос</h3>
+
+          <div class="form-grid">
+            <label>
+              <span>Имя</span>
+              <input type="text" name="name" placeholder="Иван Иванов" required>
+            </label>
+
+            <label>
+              <span>E‑mail</span>
+              <input type="email" name="email" placeholder="name@example.ru" required>
+            </label>
+
+            <label class="full">
+              <span>Сообщение</span>
+              <textarea name="message" rows="5" placeholder="Коротко опишите вопрос" required></textarea>
+            </label>
+          </div>
+
+          <button class="contact-button" type="submit">Отправить</button>
+          <button class="contact-button" type="button">Позвонить сейчас</button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer" role="contentinfo">
+      <div class="wrap">
+        <p style="margin:0;">© 2025 Семестровая работа</p>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
