--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
         <figure>
           <img src="images/photo.png" alt="Фотография автора" class="profile-photo" width="220" height="280">
-          <figcaption class="profile-name">Лэ Дык Тхань Дат — ЭФБО-12-24</figcaption>
+          <figcaption class="profile-name">Лэ Дык Тхань Дат</figcaption>
         </figure>
 
-        <p class="profile-group">Род. 1997, Чебоксары</p>
+        <p class="profile-group">ЭФБО-12-24</p>
       </section>
 
       <section class="about-me" aria-labelledby="about-title">
