--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h3 id="skills-title" class="section-title">Навыки</h3>
         <div class="skills-grid">
           <span class="skill-tag">Умею готовить</span>
-          <span class="skill-tag">10 000 кубков в Clash Royale</span>
+          <span class="skill-tag">10к кубков в Clash Royale</span>
           <span class="skill-tag">Умею свистеть</span>
           <span class="skill-tag">Плавание</span>
         </div>
