--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -33,33 +33,41 @@
         <h2 id="contacts-title" class="section-title">Наши контакты</h2>
 
         <div class="grid">
+          <!-- Левая колонка: каждый пункт под заголовком -->
           <div class="contact-info">
-            <h3 class="section-title" style="margin-bottom:8px">Электронная почта</h3>
-            <p><strong>Адрес электронной почты:</strong> <a href="mailto:astafev@mirea.ru">astafev@mirea.ru</a></p>
-
-            <h3 class="section-title" style="margin:16px 0 8px">Физический адрес</h3>
-            <p><strong>Адрес:</strong> г. Москва, ул. Пушкина, д. Колотушкина</p>
-
-            <h3 class="section-title" style="margin:16px 0 8px">Телефон</h3>
-            <p>+7 (495) 123-45-67</p>
-
-            <h3 class="section-title" style="margin:16px 0 8px">Время работы</h3>
-            <p>Пн–Пт: 9:00–18:00</p>
-
-            <h3 class="section-title" style="margin:16px 0 8px">Социальные сети</h3>
-            <p>VK, Telegram, WhatsApp</p>
-
-            <div style="margin-top:16px">
-              <button class="btn js-open-modal" type="button" data-modal="contact">Связаться с нами</button>
+            <div class="contact-block">
+              <h3 class="contact-title">Электронная почта</h3>
+              <p class="contact-text"><strong>Адрес электронной почты:</strong> <a href="mailto:astafev@mirea.ru">astafev@mirea.ru</a></p>
             </div>
+
+            <div class="contact-block">
+              <h3 class="contact-title">Физический адрес</h3>
+              <p class="contact-text"><strong>Адрес:</strong> г. Москва, ул. Пушкина, д. Колотушкина</p>
+            </div>
+
+            <div class="contact-block">
+              <h3 class="contact-title">Телефон</h3>
+              <p class="contact-text">+7 (495) 123-45-67</p>
+            </div>
+
+            <div class="contact-block">
+              <h3 class="contact-title">Время работы</h3>
+              <p class="contact-text">Пн–Пт: 9:00–18:00</p>
+            </div>
+
+            <div class="contact-block">
+              <h3 class="contact-title">Социальные сети</h3>
+              <p class="contact-text">VK, Telegram, WhatsApp</p>
+            </div>
+
+            <button class="btn js-open-modal" type="button" data-modal="contact">Связаться с нами</button>
           </div>
 
+          <!-- Правая колонка: быстрая связь -->
           <div class="contact-info">
-            <h3 class="section-title" style="margin:0 0 8px">Быстрая связь</h3>
-            <p>Оставьте запрос — специалист свяжется по указанным данным.</p>
-            <div>
-              <button class="btn secondary js-open-modal" type="button" data-modal="contact">Открыть форму</button>
-            </div>
+            <h3 class="contact-title">Быстрая связь</h3>
+            <p class="contact-text">Оставьте запрос — специалист свяжется по указанным данным.</p>
+            <button class="btn secondary js-open-modal" type="button" data-modal="contact">Открыть форму</button>
           </div>
         </div>
       </section>
@@ -94,7 +102,7 @@
             <input type="tel" name="phone" placeholder="+7 (___) ___-__-__" required autocomplete="tel">
           </label>
 
-          <label>
+        <label>
             <span>Электронная почта *</span>
             <input type="email" name="email" placeholder="name@example.ru" required autocomplete="email">
           </label>
